Add blur/pixelate strength settings and slider for adjusting them

The strength values are floating point numbers that go from 0 to 1, like percents.
I chose to make them like percents instead of a scale factor for the pixelate effect
and a standard deviation (sigma) for the blur effect for the following reasons:

- Making the settings match the internal values used would make them too dependent on the implementation.
- It would be hard to explain how the values work to users.
- It would be harder to represent the settings in the UI in a reusable way.

I chose a slider instead of a spinbox for the following reasons:

- 0% in a spinbox would imply no effect, but no effect would be useless.
- The minimum position of a slider only implies the minimum value, making it more semantically flexible.
- The exact values aren't very meaningful, so there's no need to type an exact percent.
- Sliders are a bit easier to interact with than spinboxes.
- There was plenty of space.

BUG: 469184