src/Gui/Annotations/AnnotationDocument.h
@@ -194,6 +194,7 @@ class SelectedItemWrapper : public QObject
     Q_PROPERTY(int strokeWidth READ strokeWidth WRITE setStrokeWidth NOTIFY strokeWidthChanged)
     Q_PROPERTY(QColor strokeColor READ strokeColor WRITE setStrokeColor NOTIFY strokeColorChanged)
     Q_PROPERTY(QColor fillColor READ fillColor WRITE setFillColor NOTIFY fillColorChanged)
+    Q_PROPERTY(qreal strength READ strength WRITE setStrength NOTIFY strengthChanged)
     Q_PROPERTY(QFont font READ font WRITE setFont NOTIFY fontChanged)
     Q_PROPERTY(QColor fontColor READ fontColor WRITE setFontColor NOTIFY fontColorChanged)
     Q_PROPERTY(int number READ number WRITE setNumber NOTIFY numberChanged)
@@ -235,6 +236,9 @@ public:
     QColor fillColor() const;
     void setFillColor(const QColor &color);
 
+    qreal strength() const;
+    void setStrength(qreal strength);
+
     QFont font() const;
     void setFont(const QFont &font);
 
@@ -256,6 +260,7 @@ Q_SIGNALS:
     void strokeWidthChanged();
     void strokeColorChanged();
     void fillColorChanged();
+    void strengthChanged();
     void fontChanged();
     void fontColorChanged();
     void numberChanged();
